core/target/include/zz/sysinfo_proto.h

typedef enum {
    protonerf_FieldType_Skip = 0,
    protonerf_FieldType_Int32 = 1,
    protonerf_FieldType_Int64 = 2,
    protonerf_FieldType_Uint32 = 3,
    protonerf_FieldType_Uint64 = 4,
    protonerf_FieldType_Sint32 = 5,
    protonerf_FieldType_Sint64 = 6,
    protonerf_FieldType_Bool = 7,
    protonerf_FieldType_Enum = 8,
    protonerf_FieldType_Fixed64 = 9,
    protonerf_FieldType_Sfixed64 = 10,
    protonerf_FieldType_Double = 11,
    protonerf_FieldType_String = 12,
    protonerf_FieldType_Bytes = 13,
    protonerf_FieldType_Message = 14,
    protonerf_FieldType_Repeated = 15,
    protonerf_FieldType_Fixed32 = 16,
    protonerf_FieldType_Sfixed32 = 17,
    protonerf_FieldType_Float = 18,

} protonerf_FieldType;
protonerf_FieldType sysinfo_proto_SensorsTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_UnpublishTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_WifiStationTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_NetAddressTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_NetworkGetTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_FilterByRoleTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_NetworkGetResultTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_PathTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_ArpTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_BelltowerTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_ClaimOneTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_WifiInterfaceTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_SupersedeTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_TraceResponseTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_FirmwareTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_LocationTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_CertificateRequestTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_RevokerTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_GenesisUpdateTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_ProtoHeaderTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_ClaimAllTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_InteractiveAuthTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_MoveInstructionTypes (uintptr_t const  index);