core/snapshot/target/rust/sysinfo_proto.rs


    #[link_name = "sysinfo_proto_MoveInstructionTypes"]
    pub fn r#MoveInstructionTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_WifiInterfaceTypes"]
    pub fn r#WifiInterfaceTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_BelltowerTypes"]
    pub fn r#BelltowerTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_CertificateRequestTypes"]
    pub fn r#CertificateRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_NetAddressTypes"]
    pub fn r#NetAddressTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_ClaimOneTypes"]
    pub fn r#ClaimOneTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_ArpTypes"]
    pub fn r#ArpTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_SupersedeTypes"]
    pub fn r#SupersedeTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_SensorsTypes"]
    pub fn r#SensorsTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_PathTypes"]
    pub fn r#PathTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_GenesisUpdateTypes"]
    pub fn r#GenesisUpdateTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_ProtoHeaderTypes"]
    pub fn r#ProtoHeaderTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_TraceResponseTypes"]
    pub fn r#TraceResponseTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_NetworkGetResultTypes"]
    pub fn r#NetworkGetResultTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_WifiStationTypes"]
    pub fn r#WifiStationTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_FilterByRoleTypes"]
    pub fn r#FilterByRoleTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_UnpublishTypes"]
    pub fn r#UnpublishTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_ClaimAllTypes"]
    pub fn r#ClaimAllTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_LocationTypes"]
    pub fn r#LocationTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_RevokerTypes"]
    pub fn r#RevokerTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_FirmwareTypes"]
    pub fn r#FirmwareTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_InteractiveAuthTypes"]
    pub fn r#InteractiveAuthTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_NetworkGetTypes"]
    pub fn r#NetworkGetTypes( Zindex: usize)  -> super::protonerf::FieldType;

}
